--- a/css/site.css
+++ b/css/site.css
@@ -1492,7 +1492,19 @@ position:relative;
     background-color: rgba(235, 235, 235, 0.7);
     z-index: 10004;
 }
-
+.flyoutproductscontent {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border: 1px solid black;
+    width: 400px;
+    height: 200px;
+    padding: 15px;
+    background-color: white;
+}
 .flyoutOverlayContent
 {
     display:none;
@@ -2073,3 +2085,192 @@ position:relative;
 
 .select2-container--classic.select2-container--open .select2-dropdown {
   border-color: #5897fb; }
+
+/*Linked entity fields condition*/
+.fieldoptionsettingbutton {
+    background-color: white;
+    float: right;
+    padding: 2px;
+    margin:2px 5px 0 0;
+    height: 20px;
+    width: 30px;
+    border:none;
+    background-image: url(dcrmeg_settings);  
+    background-repeat: no-repeat; 
+    background-position:  center;
+}
+    .fieldoptionsettingbutton:hover {
+        border: solid 1px lightgray;
+    }
+
+.checklistbuttoncondition {
+    background-color: lightblue;
+}
+
+.entitylistbuttons {
+    background-color: transparent;
+    float:right;
+    padding: 0;
+    margin:0;
+    height: 18px;
+    width: 18px;
+    border:none;
+    background-image: url(dcrmeg_deletecan16);
+    background-repeat: no-repeat; 
+    background-position:  center;
+}
+    .entitylistbuttons:hover {
+        border: solid 1px #82cbe2;
+    }
+
+.fixed_headers {
+  width: 300px;
+  table-layout: fixed;
+  border-collapse: collapse;
+  font-weight: normal;
+}
+.fixed_headers th {
+  text-align: left;
+}
+.fixed_headers td {
+  text-align: left;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
+}
+.fixed_headers td:nth-child(1) {
+  width: 40px;
+}
+.fixed_headers td:nth-child(2) {
+  width: 70px;
+}
+.fixed_headers td:nth-child(3) {
+  width: 70px;
+}
+.fixed_headers td:nth-child(4) {
+  width: 80px;
+}
+.fixed_headers th:nth-child(1) {
+  width: 40px;
+}
+.fixed_headers th:nth-child(2) {
+  width: 70px;
+}
+.fixed_headers th:nth-child(3) {
+  width: 70px;
+}
+.fixed_headers th:nth-child(4) {
+  width: 80px;
+}
+.fixed_headers thead tr {
+  display: block;
+  position: relative;
+}
+.fixed_headers tbody {
+  display: block;
+  overflow: auto;
+  width: 100%;
+  height: 150px;
+}
+
+/* 370 */
+.products_fixed_headers {
+  width: 400px;
+  table-layout: fixed;
+  border-collapse: collapse;
+  font-weight: normal;
+}
+.products_fixed_headers th {
+  text-align: left;
+}
+.products_fixed_headers td {
+  text-align: left;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
+}
+.products_fixed_headers td:nth-child(1) {
+  width: 30px;
+}
+.products_fixed_headers td:nth-child(2) {
+  width: 140px;
+}
+.products_fixed_headers td:nth-child(3) {
+  width: 100px;
+}
+.products_fixed_headers td:nth-child(4) {
+  width: 100px;
+}
+.products_fixed_headers th:nth-child(1) {
+  width: 30px;
+}
+.products_fixed_headers th:nth-child(2) {
+  width: 140px;
+}
+.products_fixed_headers th:nth-child(3) {
+  width: 100px;
+}
+.products_fixed_headers th:nth-child(4) {
+  width: 100px;
+}
+.products_fixed_headers thead tr {
+  display: block;
+  position: relative;
+}
+.products_fixed_headers tbody {
+  display: block;
+  overflow: auto;
+  width: 100%;
+  height: 150px;
+}
+.products_fixed_headers tbody tr:hover {
+    background-color: #dcebef;
+}
+.products_fixed_headers tbody img {
+    display: inline-block;
+    margin-right: 5px;
+    width: 16px;
+    height: 16px;
+}
+
+.linkedentityfilters
+{
+    display:none;
+    position: absolute;
+    border: 1px solid black;
+    padding: 10px;
+    background-color: white;
+}
+.linkedentityfilters select {
+    margin-left: 5px;
+}
+.linkedentityfilters input {
+    margin-top: 5px;
+}
+.linkedentityfilters div {
+    margin-top: 5px;
+}
+
+.linkedentityfiltersbtncontainer {
+    margin-top: 10px;
+}
+
+.linkedentityfiltersbtncontainer button {
+    display: inline-block;
+    padding: 5px;
+    margin-right: 3px;
+    width: 60px;
+    height: 24px;
+    border: solid 1px lightgray;
+    background-color: white;
+    font-size: 11px;
+}
+    .linkedentityfiltersbtncontainer button:hover {
+        border-color: #82cbe2;
+        background-color: #eeeeee;
+    }
+    .linkedentityfiltersbtncontainer button:focus {
+        background-color: #eeeeee;
+    }
