--- a/css/site.css
+++ b/css/site.css
@@ -14,6 +14,9 @@
 }
 
 .headertitle {
+}
+
+.wrapheadertitle {
     overflow: hidden;
     -ms-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
